--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <section class="c-rules">
     <div class="c-rules__box">
       <h1 class="c-rules__title">Rules:</h1>
-      <p class="c-rules__sub">Like the game of golf, pub golf has the standard 9 holes where each bar is considered a hole. However, some of you bitchasses are either lightweights or don't have a fake so I've cut it down to like ~6 holes and all the alc is just in a backpack because we can't do a proper pub crawl. <br>
+      <p class="c-rules__sub">Like the game of golf, pub golf has the standard 9 holes where each bar is considered a hole. However, some of you dipsticks are either lightweights or don't have a fake so I've cut it down to like ~6 holes and all the alc is just in a backpack because we can't do a proper pub crawl. <br>
       Each hole will have a par number which represents how many sips it should take to complete the drink. Lets say Hole 2 is a full glass of wine par 3, that means you need to drink it in 3 sips. 2 sips is scored a -1, 4 sips is scored a +1 just like golf. Some holes, labeled in blue, will be designated water hazards meaning that you can not use the bathroom there.</p>
     </div>
   </section>
@@ -38,7 +38,7 @@
   <!-- Logistics - Course - Activities -->
   <section class="c-planning">
     <div class="c-third">
-      <h1 class="c-third__title">Logistics:</h1>
+      <div class="c-third__title" style="color: #edca85;">Logistics:</div>
       <ul class="c-third__list">
         <li>Teams of 4???</li>
         <li>Start at 7:00pm</li>
@@ -51,7 +51,7 @@
       </ul>
     </div>
     <div class="c-third">
-      <h1 class="c-third__title">The Course:</h1>
+      <div class="c-third__title" style="color: #f093b0;">The Course:</div>
       <ol class="c-course__list">
         <li>Edward 40 Hands - infinite</li>
         <span class="c-water-hazard"><li>Glass of Wine - Par 3</li></span>
@@ -62,7 +62,7 @@
       </ol>
     </div>
     <div class="c-third">
-      <h1 class="c-third__title">Fodder:</h1>
+      <div class="c-third__title" style="color: #a162e8;">Fodder:</div>
       <ul class="c-third__list">
         <li>PK Shootout</li>
         <li>Say it or shot it</li>
@@ -77,7 +77,7 @@
   <!-- Penalties - Bonuses - Forfeits -->
   <section class="c-planning">
     <div class="c-third2">
-      <h1 class="c-third__title">Penalties:</h1>
+      <div class="c-third__title" style="color: #a0e9ff;">Penalties:</div>
       <ul class="c-third__list">
         <li>Spilling is a +1</li>
         <li>Falling is a +3</li>
@@ -85,7 +85,7 @@
       </ul>
     </div>
     <div class="c-third2">
-      <h1 class="c-third__title">Bonuses:</h1>
+      <div class="c-third__title" style="color: #edca85;">Bonuses:</div>
       <ol class="c-course__list">
         <li>Best dressed -1</li>
         <li>Best team pic -1</li>
@@ -93,7 +93,7 @@
       </ol>
     </div>
     <div class="c-third2">
-      <h1 class="c-third__title">Forfeits:</h1>
+      <div class="c-third__title" style="color: #f093b0;">Forfeits:</div>
       <ul class="c-third__list">
         <li>Red ass?</li>
         <li>Winners pick losers outfits for a week?</li>
@@ -115,6 +115,40 @@
         <span class="fa fa-star"></span>
       </div>
       <div class="c-golfer__img"><img src="images/alex-bao.png" alt=""></div>
+    </div>
+    <div class="c-golfer">
+      <div class="c-golfer__name">Annika Sharp</div>
+      <div class="c-golfer__rating">Drinking:
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star"></span>
+        <span class="fa fa-star"></span>
+        <span class="fa fa-star"></span>
+      </div>
+      <div class="c-golfer__img"><img src="images/annika-sharp.jpeg" alt=""></div>
+    </div>
+    <div class="c-golfer">
+      <div class="c-golfer__name">Olivia Bemis-Driscoll</div>
+      <div class="c-golfer__rating">Drinking:
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star"></span>
+        <span class="fa fa-star"></span>
+        <span class="fa fa-star"></span>
+      </div>
+      <div class="c-golfer__img"><img src="images/olivia-bd.jpeg" alt=""></div>
+    </div>
+    <div class="c-golfer">
+      <div class="c-golfer__name">Om Naphade</div>
+      <div class="c-golfer__rating">Drinking:
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star"></span>
+      </div>
+      <div class="c-golfer__img"><img src="images/om-naphade.jpeg" alt=""></div>
+    </div>
   </section>
 
   
