--- a/index.html
+++ b/index.html
@@ -149,6 +149,17 @@
       </div>
       <div class="c-golfer__img"><img src="images/om-naphade.jpeg" alt=""></div>
     </div>
+    <div class="c-golfer">
+      <div class="c-golfer__name">Tanya Deshpande</div>
+      <div class="c-golfer__rating">Drinking (self proclaimed):
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+      </div>
+      <div class="c-golfer__img"><img src="images/tanya-deshpande.jpeg" alt=""></div>
+    </div>
   </section>
 
   
