added golfer profiles

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="c-rules__box">
       <h1 class="c-rules__title">Rules:</h1>
       <p class="c-rules__sub">Like the game of golf, pub golf has the standard 9 holes where each bar is considered a hole. However, some of you dipsticks are either lightweights or don't have a fake so I've cut it down to like ~6 holes and all the alc is just in a backpack because we can't do a proper pub crawl. <br>
-      Each hole will have a par number which represents how many sips it should take to complete the drink. Lets say Hole 2 is a full glass of wine par 3, that means you need to drink it in 3 sips. 2 sips is scored a -1, 4 sips is scored a +1 just like golf. Some holes, labeled in blue, will be designated water hazards meaning that you can not use the bathroom there.</p>
+      Each hole will have a par number which represents how many sips it should take to complete the drink. Lets say Hole 2 is a full glass of wine par 3, that means you need to drink it in 3 sips. 2 sips is scored a -1, 4 sips is scored a +1 just like golf. Some holes, labeled in blue, will be designated water hazards meaning that you can not use the bathroom there. There will be challenges/fodder stuff to do so that you can reduce the number of strokes. The team with the most strokes at the end will do some sort of punishment idk.</p>
     </div>
   </section>
 
@@ -107,58 +107,234 @@
     <h1 class="c-golfers__header">Meet the Golfers</h1>
     <div class="c-golfer">
       <div class="c-golfer__name">Alex Bao</div>
-      <div class="c-golfer__rating">Drinking:
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star"></span>
-        <span class="fa fa-star"></span>
-      </div>
       <div class="c-golfer__img"><img src="images/alex-bao.png" alt=""></div>
+      <div class="c-golfer__nickname">Kid Genius</div>
+      <div class="c-golfer__ratings">
+        <div class="c-golfer__rating">Tolerance: 57</div>
+        <div class="c-golfer__rating">Covid: 19</div>
+        <div class="c-golfer__rating">Lungs: 1</div>
+        <div class="c-golfer__rating">Girls: 0</div>
+        <div class="c-golfer__rating">Overall: 66</div>
+      </div>
+      <div class="c-golfer__blurb">I spent too much time on this</div>
     </div>
     <div class="c-golfer">
       <div class="c-golfer__name">Annika Sharp</div>
-      <div class="c-golfer__rating">Drinking:
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star"></span>
-        <span class="fa fa-star"></span>
-        <span class="fa fa-star"></span>
-      </div>
       <div class="c-golfer__img"><img src="images/annika-sharp.jpeg" alt=""></div>
+      <div class="c-golfer__nickname">Ms. Worldwide</div>
+      <div class="c-golfer__ratings">
+        <div class="c-golfer__rating">Tolerance: 46</div>
+        <div class="c-golfer__rating">HS Classmates: 3</div>
+        <div class="c-golfer__rating">Overall: 66</div>
+      </div>
+      <div class="c-golfer__blurb">Ask about my dog's passport</div>
     </div>
     <div class="c-golfer">
       <div class="c-golfer__name">Olivia Bemis-Driscoll</div>
-      <div class="c-golfer__rating">Drinking:
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star"></span>
-        <span class="fa fa-star"></span>
-        <span class="fa fa-star"></span>
-      </div>
       <div class="c-golfer__img"><img src="images/olivia-bd.jpeg" alt=""></div>
+      <div class="c-golfer__nickname">Bri'ish Innit Bruv</div>
+      <div class="c-golfer__ratings">
+        <div class="c-golfer__rating">Tolerance: 20</div>
+        <div class="c-golfer__rating">Schlong Size: 8</div>
+        <div class="c-golfer__rating">Klepto: 99</div>
+        <div class="c-golfer__rating">Essays to Write: 5</div>
+        <div class="c-golfer__rating">Overall: 54</div>
+      </div>
+      <div class="c-golfer__blurb">Cheeky Chewsday</div>
     </div>
     <div class="c-golfer">
       <div class="c-golfer__name">Om Naphade</div>
-      <div class="c-golfer__rating">Drinking:
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star"></span>
-      </div>
       <div class="c-golfer__img"><img src="images/om-naphade.jpeg" alt=""></div>
+      <div class="c-golfer__nickname">Mr. StealYourGurl</div>
+      <div class="c-golfer__ratings">
+        <div class="c-golfer__rating">Tolerance: 75</div>
+        <div class="c-golfer__rating">Shots Shot: 1000</div>
+        <div class="c-golfer__rating">Missed Shots: 1000</div>
+        <div class="c-golfer__rating">Deez Nuts Jokes: 99</div>
+        <div class="c-golfer__rating">Literacy: 12</div>
+        <div class="c-golfer__rating">Overall: 80</div>
+      </div>
+      <div class="c-golfer__blurb">Quieres comer Ratty?</div>
     </div>
     <div class="c-golfer">
       <div class="c-golfer__name">Tanya Deshpande</div>
-      <div class="c-golfer__rating">Drinking (self proclaimed):
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star checked"></span>
-      </div>
       <div class="c-golfer__img"><img src="images/tanya-deshpande.jpeg" alt=""></div>
+      <div class="c-golfer__nickname">Rat</div>
+      <div class="c-golfer__ratings">
+        <div class="c-golfer__rating">Tolerance: 43</div>
+        <div class="c-golfer__rating">EMS Calls: 1</div>
+        <div class="c-golfer__rating">"Boyfriends": 2</div>
+        <div class="c-golfer__rating">Weeks in quarantine: 3</div>
+        <div class="c-golfer__rating">Times Flaked: 3825</div>
+        <div class="c-golfer__rating">Overall: 59</div>
+      </div>
+      <div class="c-golfer__blurb">Commencing hoe phase.</div>
+    </div>
+    <div class="c-golfer">
+      <div class="c-golfer__name">Finn Harrington</div>
+      <div class="c-golfer__img"><img src="images/finn-harrington.jpeg" alt=""></div>
+      <div class="c-golfer__nickname">Life Convict</div>
+      <div class="c-golfer__ratings">
+        <div class="c-golfer__rating">Tolerance: 99</div>
+        <div class="c-golfer__rating">Fratiness: 99</div>
+        <div class="c-golfer__rating">Lost Flasks: 2</div>
+        <div class="c-golfer__rating">Sober Days: 0</div>
+        <div class="c-golfer__rating">Nights Blacked Out: 39 </div>
+        <div class="c-golfer__rating">Overall: 69</div>
+      </div>
+      <div class="c-golfer__blurb">Absolute liability to the team.</div>
+    </div>
+    <div class="c-golfer">
+      <div class="c-golfer__name">Anusha Srinivasan</div>
+      <div class="c-golfer__img"><img src="images/anusha-srinivasan.png" alt=""></div>
+      <div class="c-golfer__nickname">Lil' Shit</div>
+      <div class="c-golfer__ratings">
+        <div class="c-golfer__rating">Tolerance: 23</div>
+        <div class="c-golfer__rating">Height: 48</div>
+        <div class="c-golfer__rating">Orgo 2 attempts: 2</div>
+        <div class="c-golfer__rating">Energy: 32</div>
+        <div class="c-golfer__rating">Cooler Sisters: 1</div>
+        <div class="c-golfer__rating">Overall: 44</div>
+      </div>
+      <div class="c-golfer__blurb">Beethoven's biggest fan.</div>
+    </div>
+    <div class="c-golfer">
+      <div class="c-golfer__name">Harrison Theriault</div>
+      <div class="c-golfer__img"><img src="images/harrison-theriault.jpg" alt=""></div>
+      <div class="c-golfer__nickname">Corporate Shill</div>
+      <div class="c-golfer__ratings">
+        <div class="c-golfer__rating">Tolerance: 55</div>
+        <div class="c-golfer__rating">EMS Calls: 1</div>
+        <div class="c-golfer__rating">Bartending: -99</div>
+        <div class="c-golfer__rating">Weeb Level: 9000+</div>
+        <div class="c-golfer__rating"></div>
+        <div class="c-golfer__rating">Overall: 54</div>
+      </div>
+      <div class="c-golfer__blurb">Classics major Lol.</div>
+    </div>
+    <div class="c-golfer">
+      <div class="c-golfer__name">Surej Anind</div>
+      <div class="c-golfer__img"><img src="images/suraj-anand.png" alt=""></div>
+      <div class="c-golfer__nickname">Polo G Dickrider</div>
+      <div class="c-golfer__ratings">
+        <div class="c-golfer__rating">Tolerance: 85</div>
+        <div class="c-golfer__rating">Ego: 99</div>
+        <div class="c-golfer__rating">Happiness: -10</div>
+        <div class="c-golfer__rating">Better Days: 2/night</div>
+        <div class="c-golfer__rating">"Yo chill" count: 32130</div>
+        <div class="c-golfer__rating">Overall: 74</div>
+      </div>
+      <div class="c-golfer__blurb">Pro-MILFs, Anti-women.</div>
+    </div>
+    <div class="c-golfer">
+      <div class="c-golfer__name">Vicky Chen</div>
+      <div class="c-golfer__img"><img src="images/vicky-chen.jpeg" alt=""></div>
+      <div class="c-golfer__nickname">Neil's Slut</div>
+      <div class="c-golfer__ratings">
+        <div class="c-golfer__rating">Tolerance: 43</div>
+        <div class="c-golfer__rating">Ego: 99</div>
+        <div class="c-golfer__rating">Happiness: -10</div>
+        <div class="c-golfer__rating">Better Days streams: 200</div>
+        <div class="c-golfer__rating"></div>
+        <div class="c-golfer__rating">Overall: 74</div>
+      </div>
+      <div class="c-golfer__blurb">Pro-MILFs. Anti-women</div>
+    </div>
+    <div class="c-golfer">
+      <div class="c-golfer__name">Neil Xu</div>
+      <div class="c-golfer__img"><img src="images/neil-xu.jpeg" alt="UPLOAD YOUR SHIT NEIL"></div>
+      <div class="c-golfer__nickname">&hearts;Her's&hearts; &uarr;</div>
+      <div class="c-golfer__ratings">
+        <div class="c-golfer__rating">Tolerance: N/A</div>
+        <div class="c-golfer__rating">Clean & Jerk: 195</div>
+        <div class="c-golfer__rating">Simp: 99</div>
+        <div class="c-golfer__rating">Positivity: 99</div>
+        <div class="c-golfer__rating">Pushover: 99</div>
+        <div class="c-golfer__rating">Overall: 5</div>
+      </div>
+      <div class="c-golfer__blurb">As useful as a celibate hooker</div>
+    </div>
+    <div class="c-golfer">
+      <div class="c-golfer__name">Vignesh Pandiarajan</div>
+      <div class="c-golfer__img"><img src="images/vignesh-pandiarajan.jpeg" alt="UPLOAD YOUR SHIT VIGNESH"></div>
+      <div class="c-golfer__nickname">Massive Dub</div>
+      <div class="c-golfer__ratings">
+        <div class="c-golfer__rating">Tolerance: 41</div>
+        <div class="c-golfer__rating">Productivity: 0</div>
+        <div class="c-golfer__rating">Depression Jokes: 5/min</div>
+        <div class="c-golfer__rating">Calls with ex: 237</div>
+        <div class="c-golfer__rating">Manifestos: 1</div>
+        <div class="c-golfer__rating">Overall: 57</div>
+      </div>
+      <div class="c-golfer__blurb">Not as massive dong</div>
+    </div>
+    <div class="c-golfer">
+      <div class="c-golfer__name">Charlotte Lee</div>
+      <div class="c-golfer__img"><img src="images/charlotte-lee.jpeg" alt="UPLOAD YOUR SHIT CHARLOTTE"></div>
+      <div class="c-golfer__nickname">Hiu Yau Chan Lee</div>
+      <div class="c-golfer__ratings">
+        <div class="c-golfer__rating">Tolerance: ???</div>
+        <div class="c-golfer__rating">Taiwan: 1</div>
+        <div class="c-golfer__rating">Intimidation: 99</div>
+        <div class="c-golfer__rating">Ego: 100</div>
+        <div class="c-golfer__rating">Good Food Combos: 0</div>
+        <div class="c-golfer__rating">Overall: 62</div>
+      </div>
+      <div class="c-golfer__blurb">Unstable</div>
+    </div>
+    <div class="c-golfer">
+      <div class="c-golfer__name">Chaerim Kang</div>
+      <div class="c-golfer__img"><img src="images/chaerim-kang.jpeg" alt="UPLOAD YOUR SHIT CHAERIM"></div>
+      <div class="c-golfer__nickname">King Kang???</div>
+      <div class="c-golfer__ratings">
+        <div class="c-golfer__rating">Tolerance: 45</div>
+        <div class="c-golfer__rating">Anger: 86</div>
+        <div class="c-golfer__rating">Pairs of Jeans: 32</div>
+        <div class="c-golfer__rating">Punches Thrown: 47</div>
+        <div class="c-golfer__rating">Nights in Goddard: 0</div>
+        <div class="c-golfer__rating">Overall: 62</div>
+      </div>
+      <div class="c-golfer__blurb">Looking different today</div>
+    </div>
+    <div class="c-golfer">
+      <div class="c-golfer__name">Erica Nam</div>
+      <div class="c-golfer__img"><img src="images/erica-nam.jpeg" alt="UPLOAD YOUR SHIT ERICA"></div>
+      <div class="c-golfer__nickname">Master Chef Sr.</div>
+      <div class="c-golfer__ratings">
+        <div class="c-golfer__rating">Tolerance: ???</div>
+        <div class="c-golfer__rating">Age: 23 going on 32</div>
+        <div class="c-golfer__rating">Kindness: 99</div>
+        <div class="c-golfer__rating">Days at Brown: 3/month</div>
+        <div class="c-golfer__rating">Overall: 45</div>
+      </div>
+      <div class="c-golfer__blurb">IDK halmeoni</div>
+    </div>
+    <div class="c-golfer">
+      <div class="c-golfer__name">Jae Ahn</div>
+      <div class="c-golfer__img"><img src="images/jae-ahn.jpeg" alt="UPLOAD YOUR SHIT JAE"></div>
+      <div class="c-golfer__nickname">Yul's Weird Brother</div>
+      <div class="c-golfer__ratings">
+        <div class="c-golfer__rating">Tolerance: ???</div>
+        <div class="c-golfer__rating">Filter: 0</div>
+        <div class="c-golfer__rating">Volume: 99</div>
+        <div class="c-golfer__rating">Overall: 62</div>
+      </div>
+      <div class="c-golfer__blurb">Busy bumping keys with Nancy Pelosi</div>
+    </div>
+    <div class="c-golfer">
+      <div class="c-golfer__name">Raphael Li</div>
+      <div class="c-golfer__img"><img src="images/Raphael-Li.jpeg" alt="UPLOAD YOUR SHIT RAPH"></div>
+      <div class="c-golfer__nickname">Carmel Pride</div>
+      <div class="c-golfer__ratings">
+        <div class="c-golfer__rating">Tolerance: 32</div>
+        <div class="c-golfer__rating">EdStem Answers: 3</div>
+        <div class="c-golfer__rating">Cluelessness: 86</div>
+        <div class="c-golfer__rating">Handmovements: 1	
+          &#128075;&#127754;</div>
+        <div class="c-golfer__rating">Nosiness: 99</div>
+        <div class="c-golfer__rating">Overall: 62</div>
+      </div>
+      <div class="c-golfer__blurb">Hiding down here from Vicky</div>
     </div>
   </section>
 
