--- a/index.html
+++ b/index.html
@@ -111,12 +111,13 @@
       <div class="c-golfer__nickname">Kid Genius</div>
       <div class="c-golfer__ratings">
         <div class="c-golfer__rating">Tolerance: 57</div>
+        <div class="c-golfer__rating">Pure Intellect: 99</div>
         <div class="c-golfer__rating">Covid: 19</div>
         <div class="c-golfer__rating">Lungs: 1</div>
         <div class="c-golfer__rating">Girls: 0</div>
         <div class="c-golfer__rating">Overall: 66</div>
       </div>
-      <div class="c-golfer__blurb">I spent too much time on this</div>
+      <div class="c-golfer__blurb">I rotate between 3 catch phrases</div>
     </div>
     <div class="c-golfer">
       <div class="c-golfer__name">Annika Sharp</div>
@@ -125,13 +126,14 @@
       <div class="c-golfer__ratings">
         <div class="c-golfer__rating">Tolerance: 46</div>
         <div class="c-golfer__rating">HS Classmates: 3</div>
+        <div class="c-golfer__rating">On-Time Finals: 0</div>
         <div class="c-golfer__rating">Overall: 66</div>
       </div>
       <div class="c-golfer__blurb">Ask about my dog's passport</div>
     </div>
     <div class="c-golfer">
       <div class="c-golfer__name">Olivia Bemis-Driscoll</div>
-      <div class="c-golfer__img"><img src="images/olivia-bd.jpeg" alt=""></div>
+      <div class="c-golfer__img"><img src="images/olivia-bemis-driscoll.jpeg" alt=""></div>
       <div class="c-golfer__nickname">Bri'ish Innit Bruv</div>
       <div class="c-golfer__ratings">
         <div class="c-golfer__rating">Tolerance: 20</div>
@@ -148,13 +150,13 @@
       <div class="c-golfer__nickname">Mr. StealYourGurl</div>
       <div class="c-golfer__ratings">
         <div class="c-golfer__rating">Tolerance: 75</div>
-        <div class="c-golfer__rating">Shots Shot: 1000</div>
-        <div class="c-golfer__rating">Missed Shots: 1000</div>
         <div class="c-golfer__rating">Deez Nuts Jokes: 99</div>
+        <div class="c-golfer__rating">Shots Shot: 1000</div>
         <div class="c-golfer__rating">Literacy: 12</div>
+        <div class="c-golfer__rating">Shots Missed: 1000</div>
         <div class="c-golfer__rating">Overall: 80</div>
       </div>
-      <div class="c-golfer__blurb">Quieres comer Ratty?</div>
+      <div class="c-golfer__blurb">Want to comito Ratty?</div>
     </div>
     <div class="c-golfer">
       <div class="c-golfer__name">Tanya Deshpande</div>
@@ -162,10 +164,10 @@
       <div class="c-golfer__nickname">Rat</div>
       <div class="c-golfer__ratings">
         <div class="c-golfer__rating">Tolerance: 43</div>
+        <div class="c-golfer__rating">Flirtines: 99</div>
         <div class="c-golfer__rating">EMS Calls: 1</div>
-        <div class="c-golfer__rating">"Boyfriends": 2</div>
-        <div class="c-golfer__rating">Weeks in quarantine: 3</div>
         <div class="c-golfer__rating">Times Flaked: 3825</div>
+        <div class="c-golfer__rating">"Boyfriends": 2</div>
         <div class="c-golfer__rating">Overall: 59</div>
       </div>
       <div class="c-golfer__blurb">Commencing hoe phase.</div>
@@ -177,9 +179,12 @@
       <div class="c-golfer__ratings">
         <div class="c-golfer__rating">Tolerance: 99</div>
         <div class="c-golfer__rating">Fratiness: 99</div>
-        <div class="c-golfer__rating">Lost Flasks: 2</div>
-        <div class="c-golfer__rating">Sober Days: 0</div>
-        <div class="c-golfer__rating">Nights Blacked Out: 39 </div>
+        <div class="c-golfer__rating">
+          <div class="hover-text">Lost Flasks: 2*
+            <span class="hidden-text">If I had a nickel for everytime I lost a flask, I'd have two nickels. Which isn't a lot, but it's weird that it happened twice. Right?</span>
+          </div></div>
+        <div class="c-golfer__rating">Avg. Drinky Time: 3pm</div>
+        <div class="c-golfer__rating">Black Outs > Memories</div>
         <div class="c-golfer__rating">Overall: 69</div>
       </div>
       <div class="c-golfer__blurb">Absolute liability to the team.</div>
@@ -191,8 +196,8 @@
       <div class="c-golfer__ratings">
         <div class="c-golfer__rating">Tolerance: 23</div>
         <div class="c-golfer__rating">Height: 48</div>
-        <div class="c-golfer__rating">Orgo 2 attempts: 2</div>
-        <div class="c-golfer__rating">Energy: 32</div>
+        <div class="c-golfer__rating">Orgo 1 Attempts: 2</div>
+        <div class="c-golfer__rating">Semesters Wasted on [REDACTED]: 3</div>
         <div class="c-golfer__rating">Cooler Sisters: 1</div>
         <div class="c-golfer__rating">Overall: 44</div>
       </div>
@@ -207,46 +212,46 @@
         <div class="c-golfer__rating">EMS Calls: 1</div>
         <div class="c-golfer__rating">Bartending: -99</div>
         <div class="c-golfer__rating">Weeb Level: 9000+</div>
-        <div class="c-golfer__rating"></div>
+        <div class="c-golfer__rating">Jr. Arthiritis: Severe</div>
         <div class="c-golfer__rating">Overall: 54</div>
       </div>
       <div class="c-golfer__blurb">Classics major Lol.</div>
     </div>
     <div class="c-golfer">
-      <div class="c-golfer__name">Surej Anind</div>
+      <div class="c-golfer__name">Soorej Anind</div>
       <div class="c-golfer__img"><img src="images/suraj-anand.png" alt=""></div>
-      <div class="c-golfer__nickname">Polo G Dickrider</div>
+      <div class="c-golfer__nickname">Budget Om</div>
       <div class="c-golfer__ratings">
         <div class="c-golfer__rating">Tolerance: 85</div>
         <div class="c-golfer__rating">Ego: 99</div>
         <div class="c-golfer__rating">Happiness: -10</div>
-        <div class="c-golfer__rating">Better Days: 2/night</div>
-        <div class="c-golfer__rating">"Yo chill" count: 32130</div>
+        <div class="c-golfer__rating">Touching Dudes: 99</div>
+        <div class="c-golfer__rating">Therapy: Required</div>
         <div class="c-golfer__rating">Overall: 74</div>
       </div>
-      <div class="c-golfer__blurb">Pro-MILFs, Anti-women.</div>
+      <div class="c-golfer__blurb">Pro-MILFs. Anti-women.</div>
     </div>
     <div class="c-golfer">
       <div class="c-golfer__name">Vicky Chen</div>
       <div class="c-golfer__img"><img src="images/vicky-chen.jpeg" alt=""></div>
-      <div class="c-golfer__nickname">Neil's Slut</div>
+      <div class="c-golfer__nickname">V Money</div>
       <div class="c-golfer__ratings">
-        <div class="c-golfer__rating">Tolerance: 43</div>
-        <div class="c-golfer__rating">Ego: 99</div>
-        <div class="c-golfer__rating">Happiness: -10</div>
-        <div class="c-golfer__rating">Better Days streams: 200</div>
+        <div class="c-golfer__rating">Tolerance: 33</div>
+        <div class="c-golfer__rating">"Dates" w/ Neil: 14</div>
+        <div class="c-golfer__rating">New Pem Friends: 1</div>
         <div class="c-golfer__rating"></div>
-        <div class="c-golfer__rating">Overall: 74</div>
+        <div class="c-golfer__rating">RPLs Slept With: 1</div>
+        <div class="c-golfer__rating">Overall: 43</div>
       </div>
-      <div class="c-golfer__blurb">Pro-MILFs. Anti-women</div>
+      <div class="c-golfer__blurb">Neil's slut.</div>
     </div>
     <div class="c-golfer">
       <div class="c-golfer__name">Neil Xu</div>
-      <div class="c-golfer__img"><img src="images/neil-xu.jpeg" alt="UPLOAD YOUR SHIT NEIL"></div>
+      <div class="c-golfer__img"><img src="images/neil-xu.png" alt="UPLOAD YOUR SHIT NEIL"></div>
       <div class="c-golfer__nickname">&hearts;Her's&hearts; &uarr;</div>
       <div class="c-golfer__ratings">
         <div class="c-golfer__rating">Tolerance: N/A</div>
-        <div class="c-golfer__rating">Clean & Jerk: 195</div>
+        <div class="c-golfer__rating">Clean & Jerk: 215</div>
         <div class="c-golfer__rating">Simp: 99</div>
         <div class="c-golfer__rating">Positivity: 99</div>
         <div class="c-golfer__rating">Pushover: 99</div>
@@ -256,13 +261,13 @@
     </div>
     <div class="c-golfer">
       <div class="c-golfer__name">Vignesh Pandiarajan</div>
-      <div class="c-golfer__img"><img src="images/vignesh-pandiarajan.jpeg" alt="UPLOAD YOUR SHIT VIGNESH"></div>
+      <div class="c-golfer__img"><img src="images/vignesh-pandiarajan.jpg" alt="UPLOAD YOUR SHIT VIGNESH"></div>
       <div class="c-golfer__nickname">Massive Dub</div>
       <div class="c-golfer__ratings">
         <div class="c-golfer__rating">Tolerance: 41</div>
         <div class="c-golfer__rating">Productivity: 0</div>
         <div class="c-golfer__rating">Depression Jokes: 5/min</div>
-        <div class="c-golfer__rating">Calls with ex: 237</div>
+        <div class="c-golfer__rating">Calls w/ Ex: Int Overflow</div>
         <div class="c-golfer__rating">Manifestos: 1</div>
         <div class="c-golfer__rating">Overall: 57</div>
       </div>
@@ -270,17 +275,17 @@
     </div>
     <div class="c-golfer">
       <div class="c-golfer__name">Charlotte Lee</div>
-      <div class="c-golfer__img"><img src="images/charlotte-lee.jpeg" alt="UPLOAD YOUR SHIT CHARLOTTE"></div>
+      <div class="c-golfer__img"><img src="images/charlotte-lee.jpg" alt="UPLOAD YOUR SHIT CHARLOTTE"></div>
       <div class="c-golfer__nickname">Hiu Yau Chan Lee</div>
       <div class="c-golfer__ratings">
         <div class="c-golfer__rating">Tolerance: ???</div>
         <div class="c-golfer__rating">Taiwan: 1</div>
         <div class="c-golfer__rating">Intimidation: 99</div>
         <div class="c-golfer__rating">Ego: 100</div>
-        <div class="c-golfer__rating">Good Food Combos: 0</div>
+        <div class="c-golfer__rating">Mental Stability: 0</div>
         <div class="c-golfer__rating">Overall: 62</div>
       </div>
-      <div class="c-golfer__blurb">Unstable</div>
+      <div class="c-golfer__blurb">Aspiring Brit</div>
     </div>
     <div class="c-golfer">
       <div class="c-golfer__name">Chaerim Kang</div>
@@ -299,7 +304,7 @@
     <div class="c-golfer">
       <div class="c-golfer__name">Erica Nam</div>
       <div class="c-golfer__img"><img src="images/erica-nam.jpeg" alt="UPLOAD YOUR SHIT ERICA"></div>
-      <div class="c-golfer__nickname">Master Chef Sr.</div>
+      <div class="c-golfer__nickname">HyunJee Nam</div>
       <div class="c-golfer__ratings">
         <div class="c-golfer__rating">Tolerance: ???</div>
         <div class="c-golfer__rating">Age: 23 going on 32</div>
@@ -307,7 +312,7 @@
         <div class="c-golfer__rating">Days at Brown: 3/month</div>
         <div class="c-golfer__rating">Overall: 45</div>
       </div>
-      <div class="c-golfer__blurb">IDK halmeoni</div>
+      <div class="c-golfer__blurb">Master Chef Sr.</div>
     </div>
     <div class="c-golfer">
       <div class="c-golfer__name">Jae Ahn</div>
@@ -317,20 +322,20 @@
         <div class="c-golfer__rating">Tolerance: ???</div>
         <div class="c-golfer__rating">Filter: 0</div>
         <div class="c-golfer__rating">Volume: 99</div>
+        <div class="c-golfer__rating">MPG: 4</div>
         <div class="c-golfer__rating">Overall: 62</div>
       </div>
       <div class="c-golfer__blurb">Busy bumping keys with Nancy Pelosi</div>
     </div>
     <div class="c-golfer">
       <div class="c-golfer__name">Raphael Li</div>
-      <div class="c-golfer__img"><img src="images/Raphael-Li.jpeg" alt="UPLOAD YOUR SHIT RAPH"></div>
+      <div class="c-golfer__img"><img src="images/raphael-li.jpeg" alt="UPLOAD YOUR SHIT RAPH"></div>
       <div class="c-golfer__nickname">Carmel Pride</div>
       <div class="c-golfer__ratings">
         <div class="c-golfer__rating">Tolerance: 32</div>
         <div class="c-golfer__rating">EdStem Answers: 3</div>
         <div class="c-golfer__rating">Cluelessness: 86</div>
-        <div class="c-golfer__rating">Handmovements: 1	
-          &#128075;&#127754;</div>
+        <div class="c-golfer__rating">Men Kissed: 11</div>
         <div class="c-golfer__rating">Nosiness: 99</div>
         <div class="c-golfer__rating">Overall: 62</div>
       </div>
