--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <section class="c-welcome">
     <div class="c-welcome__box">
       <h1 class="c-welcome__title">Welcome to the <br> 2nd Ever Pub Golf!</h1>
-      <p class="c-welcome__sub">Save the date: Saturday, March 12th for the most degen shit you've ever seen.</p>
+      <p class="c-welcome__sub">Save the date: Friday, March 11th for the most degen shit you've ever seen.</p>
     </div>
     <div class="o-flex c-welcome__img">
       <img src="images/pub-golf.png" alt
@@ -41,7 +41,7 @@
       <div class="c-third__title" style="color: #edca85;">Logistics:</div>
       <ul class="c-third__list">
         <li>Teams of 4???</li>
-        <li>Start at 7:00pm</li>
+        <li>Start at 8:30pm</li>
         <li>Greg</li>
         <li>BnH</li>
         <li>Sci Li</li>
@@ -89,15 +89,15 @@
       <ol class="c-course__list">
         <li>Best dressed -1</li>
         <li>Best team pic -1</li>
-        <li>Getting a random person’s number -1</li>
+        <li>Getting a random person's number -1</li>
       </ol>
     </div>
     <div class="c-third2">
       <div class="c-third__title" style="color: #f093b0;">Forfeits:</div>
       <ul class="c-third__list">
-        <li>Red ass?</li>
-        <li>Winners pick losers outfits for a week?</li>
+        <li>Winners pick losers outfits for a day?</li>
         <li>Losers have to post/text something embarrassing?</li>
+        <li>Red ass?</li>
       </ul>
     </div>
   </section>
@@ -126,7 +126,9 @@
       <div class="c-golfer__ratings">
         <div class="c-golfer__rating">Tolerance: 46</div>
         <div class="c-golfer__rating">HS Classmates: 3</div>
+        <div class="c-golfer__rating">Alex's Friends Into Her: 7</div>
         <div class="c-golfer__rating">On-Time Finals: 0</div>
+        <div class="c-golfer__rating">"New Friends": 7</div>
         <div class="c-golfer__rating">Overall: 66</div>
       </div>
       <div class="c-golfer__blurb">Ask about my dog's passport</div>
@@ -136,7 +138,7 @@
       <div class="c-golfer__img"><img src="images/olivia-bemis-driscoll.jpeg" alt=""></div>
       <div class="c-golfer__nickname">Bri'ish Innit Bruv</div>
       <div class="c-golfer__ratings">
-        <div class="c-golfer__rating">Tolerance: 20</div>
+        <div class="c-golfer__rating">Tolerance: 35</div>
         <div class="c-golfer__rating">Schlong Size: 8</div>
         <div class="c-golfer__rating">Klepto: 99</div>
         <div class="c-golfer__rating">Essays to Write: 5</div>
@@ -156,7 +158,7 @@
         <div class="c-golfer__rating">Shots Missed: 1000</div>
         <div class="c-golfer__rating">Overall: 80</div>
       </div>
-      <div class="c-golfer__blurb">Want to comito Ratty?</div>
+      <div class="c-golfer__blurb">Want to get comita?</div>
     </div>
     <div class="c-golfer">
       <div class="c-golfer__name">Tanya Deshpande</div>
@@ -187,7 +189,7 @@
         <div class="c-golfer__rating">Black Outs > Memories</div>
         <div class="c-golfer__rating">Overall: 69</div>
       </div>
-      <div class="c-golfer__blurb">Absolute liability to the team.</div>
+      <div class="c-golfer__blurb">Menace to sobriety.</div>
     </div>
     <div class="c-golfer">
       <div class="c-golfer__name">Anusha Srinivasan</div>
@@ -196,9 +198,9 @@
       <div class="c-golfer__ratings">
         <div class="c-golfer__rating">Tolerance: 23</div>
         <div class="c-golfer__rating">Height: 48</div>
-        <div class="c-golfer__rating">Orgo 1 Attempts: 2</div>
-        <div class="c-golfer__rating">Semesters Wasted on [REDACTED]: 3</div>
         <div class="c-golfer__rating">Cooler Sisters: 1</div>
+        <div class="c-golfer__rating">Semesters Wasted on [REDACTED]: 3</div>
+        <div class="c-golfer__rating">Orgo 1 Attempts: 2</div>
         <div class="c-golfer__rating">Overall: 44</div>
       </div>
       <div class="c-golfer__blurb">Beethoven's biggest fan.</div>
@@ -294,7 +296,7 @@
       <div class="c-golfer__ratings">
         <div class="c-golfer__rating">Tolerance: 45</div>
         <div class="c-golfer__rating">Anger: 86</div>
-        <div class="c-golfer__rating">Pairs of Jeans: 32</div>
+        <div class="c-golfer__rating">Age Gap: 14</div>
         <div class="c-golfer__rating">Punches Thrown: 47</div>
         <div class="c-golfer__rating">Nights in Goddard: 0</div>
         <div class="c-golfer__rating">Overall: 62</div>
@@ -309,7 +311,8 @@
         <div class="c-golfer__rating">Tolerance: ???</div>
         <div class="c-golfer__rating">Age: 23 going on 32</div>
         <div class="c-golfer__rating">Kindness: 99</div>
-        <div class="c-golfer__rating">Days at Brown: 3/month</div>
+        <div class="c-golfer__rating">Days at Brown: 3/sem</div>
+        <div class="c-golfer__rating">Cousin Crushes: 1</div>
         <div class="c-golfer__rating">Overall: 45</div>
       </div>
       <div class="c-golfer__blurb">Master Chef Sr.</div>
@@ -321,8 +324,9 @@
       <div class="c-golfer__ratings">
         <div class="c-golfer__rating">Tolerance: ???</div>
         <div class="c-golfer__rating">Filter: 0</div>
+        <div class="c-golfer__rating">YouTube Videos: 2000</div>
         <div class="c-golfer__rating">Volume: 99</div>
-        <div class="c-golfer__rating">MPG: 4</div>
+        <div class="c-golfer__rating">Subscribers: 12</div>
         <div class="c-golfer__rating">Overall: 62</div>
       </div>
       <div class="c-golfer__blurb">Busy bumping keys with Nancy Pelosi</div>
@@ -336,13 +340,16 @@
         <div class="c-golfer__rating">EdStem Answers: 3</div>
         <div class="c-golfer__rating">Cluelessness: 86</div>
         <div class="c-golfer__rating">Men Kissed: 11</div>
-        <div class="c-golfer__rating">Nosiness: 99</div>
+        <div class="c-golfer__rating">Deleted Projects: 1</div>
         <div class="c-golfer__rating">Overall: 62</div>
       </div>
       <div class="c-golfer__blurb">Hiding down here from Vicky</div>
     </div>
   </section>
-
+  Team 1: Finn, Tanya, Jae, Erica <br>
+  Team 2: Suraj, Vicky, Alex, HT, Neil (Cheerleader) <br>
+  Team 3: Chaerim, Olivia, Raph, Charlotte <br>
+  Team 4: Om, Anusha, Annika, Vignesh <br>
   
   <script src="" async defer></script>
 </body>
