--- a/index.html
+++ b/index.html
@@ -346,11 +346,47 @@
       <div class="c-golfer__blurb">Hiding down here from Vicky</div>
     </div>
   </section>
-  Team 1: Finn, Tanya, Jae, Erica <br>
-  Team 2: Suraj, Vicky, Alex, HT, Neil (Cheerleader) <br>
-  Team 3: Chaerim, Olivia, Raph, Charlotte <br>
-  Team 4: Om, Anusha, Annika, Vignesh <br>
-  
+
+  <!-- Teams -->
+  <section class="c-teams">
+    <div class="c-team">
+      <h1 class="c-team__title">Team 1</h1>
+      <ul class="c-team__list">
+        <li>Alex</li>
+        <li>HT</li>
+        <li>Suraj</li>
+        <li>Vicky</li>
+      </ul>
+    </div>
+    <div class="c-team">
+      <h1 class="c-team__title">Team 2</h1>
+      <ul class="c-team__list">
+        <li>Finn</li>
+        <li>Erica</li>
+        <li>Tanya</li>
+        <li>Jae</li>
+      </ul>
+    </div>
+    <div class="c-team">
+      <h1 class="c-team__title">Team 3</h1>
+      <ul class="c-team__list">
+        <li>Raph</li>
+        <li>Charlotte</li>
+        <li>Olivia</li>
+        <li>Chaerim</li>
+      </ul>
+    </div>
+    <div class="c-team">
+      <h1 class="c-team__title">Team 4</h1>
+      <ul class="c-team__list">
+        <li>Om</li>
+        <li>Anusha</li>
+        <li>Annika</li>
+        <li>Vignesh</li>
+      </ul>
+    </div>
+  </section>
+
   <script src="" async defer></script>
 </body>
 </html>
